# tir102

./: docker-compose-mysql.yml
.devcontainer/: devcontainer.json
airflow-demo/dags/: d_01_example_dag.py  d_02_example_dag_dependency.py
data-pipeline/: .gitignore  Dockerfile  Pipfile
data-pipeline/.devcontainer/: devcontainer.json
data-pipeline/src/: p_03_pandas_summary.ipynb  p_04_pandas_group.ipynb
data-pipeline/src/pandas_practice/: p_02_ptt.ipynb  p_05_pandas_apply.ipynb  p_06_pandas_nan.ipynb  p_07_pandas_dtype.ipynb  p_08_pandas_melt.ipynb  p_09_pandas_cumcount.ipynb  p_10_pandas_merge_table.ipynb  p_11_pandas_sql.ipynb  p_12_pandas_read_sql.ipynb  p_pandas_merge_table.ipynb  ptt.csv  ptt.json
data-pipeline/src/pymysql_practice/: p_01_connect_to_db.ipynb
data-pipeline/src/test/: test_jupyter_notebook.ipynb
gcp/: 01_get_gcp_client.ipynb  02_pipeline.ipynb  03_bq_gsheets.ipynb  04_pygsheets.ipynb  06_secret_manager.ipynb  native_partition.sql  partition_csv.sql  product.jsonl  pyproject.toml
gcp/demo_partition/dt=2024-05-08/: sale.csv  sale2.csv
prefect-demo/: .pre-commit-config.yaml
prefect-demo/.github/workflows/: auto-draft-pr.yml  build-image.yml  deploy.yml  pre-commit.yml
prefect-demo/src/deployments/: f_01_quick_start_deployment.py  f_02_async_task_deployment.py  f_03_map_deployment.py  f_04_forloop_submit_deployment.py  hello_world_deployment.py
selenium-demo/: pyproject.toml  selenium-demo.py
src/pandas_practice/: basic.csv  basic_no_columns.csv  p_01_pandas_basic.ipynb  p_02_ptt.ipynb  ptt_flow.py
(+12 files in other folders)
