[tool.poetry]
name = "gcp"
version = "0.1.0"
description = ""
authors = ["uuboyscy <aegis12321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-bigquery = "^3.25.0"
db-dtypes = "^1.3.0"
pygsheets = "^2.0.6"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
