[tool.poetry]
name = "selenium-demo"
version = "0.1.0"
description = ""
authors = ["uuboyscy <aegis12321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
